--- a/backend/web/css/admin.css
+++ b/backend/web/css/admin.css
@@ -6,3 +6,33 @@
     opacity: 1;
     margin-right: 1rem;
 }
+.date-filter-range {
+    min-width: 250px;
+}
+.date-filter-range input {
+    font-size: 12px
+}
+/* PAGINATION */
+.pagination {
+    list-style: none;
+}
+.pagination > li:not(:first-child) > a {
+    margin-left: -1px;
+}
+
+.pagination > li > a,
+.pagination > li > span
+{
+    position: relative;
+    padding: .375rem .75rem;
+    display: block;
+    color: #0d6efd;
+    text-decoration: none;
+    background-color: #fff;
+    border: 1px solid #dee2e6;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+.pagination > li.active > a {
+    background: #e9ecef;
+}
+/* PAGINATION */
