--- a/backend/web/css/site.css
+++ b/backend/web/css/site.css
@@ -12,12 +12,95 @@ main > .container {
     padding-right: 15px;
     padding-left: 15px;
 }
-
+.card-img .card-header-o {
+    cursor: pointer;
+}
+.card-img .card-body-o {
+    display: none;
+}
 .not-set {
     color: #c55;
     font-style: italic;
 }
+.form-group {
+    margin-bottom: 10px;
+}
+.attribute-type-list {
+    padding-left: 0;
+}
+.attribute-type-list li,
+.attribute-sublist li
+{
+    list-style: none;
+}
+.attribute-type-sublist {
+    padding-left: 20px;
+}
+.show-attributes-for-type {
+    margin-left: 20px;
+}
+.attribute-type-list-item.active {
+    font-weight: bold;
+}
+.attributes-block {
+    box-shadow: 1px 1px 3px #ccc, -1px -1px 3px #ccc;
+}
+.attributes-block-header,
+.attributes-block-body {
+    padding: 10px;
+}
+.attributes-block-header {
+    border-bottom: 1px solid #ccc;
+}
 
+ul.list-block li {
+    margin: 10px 0;
+}
+
+
+
+
+
+
+.mt10 {
+    margin-top: 10px;
+}
+.mb10 {
+    margin-bottom: 10px;
+}
+.image-preview {
+    padding: 5px;
+    text-align: center;
+}
+.image-preview-container {
+    display: flex;
+}
+.image-preview .delete-image {
+    margin-top: 10px;
+}
+.image-preview .image-preview-content {
+    padding-top: 5px;
+    border: 1px solid #ddd;
+}
+.image-preview:first-child .image-preview-content {
+    border: 2px solid #eee;
+    box-shadow: 1px 1px 3px #198754, -1px -1px 3px #198754;
+}
+.info-message {
+    /*display: none;*/
+    color: #28a745;
+    height: 20px;
+    margin-bottom: 0;
+}
+.info-message.error {
+    color: #dc3545;
+}
+.image-preview-container .row {
+    width: 100%;
+}
+.card {
+    margin-top: 10px;
+}
 /* add sorting icons to gridview sort links */
 a.asc:after, a.desc:after {
     content: '';
@@ -89,3 +172,27 @@ a.desc:after {
     outline: none;
 }
 
+/* PAGINATION */
+.pagination {
+    list-style: none;
+}
+.pagination > li:not(:first-child) > a {
+    margin-left: -1px;
+}
+
+.pagination > li > a,
+.pagination > li > span
+{
+    position: relative;
+    padding: .375rem .75rem;
+    display: block;
+    color: #0d6efd;
+    text-decoration: none;
+    background-color: #fff;
+    border: 1px solid #dee2e6;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+/* PAGINATION */
+.select2-container--krajee-bs5 .select2-selection--multiple .select2-search--inline .select2-search__field {
+    margin: 0 0.5rem;
+}
